--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPress</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet">  GOOGLE FONTS--> 
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -55,5 +58,87 @@
             </div>
         </div>
     </section>
+
+    <section class="optimization">
+        <div class="container">
+            <img src="img/background/woman_bg.jpg" alt="woman" class="optimization_img">
+            <!-- <div class="optimization_contnet"> -->
+                <h2 class="optimization_header">Что такое оптимизация и зачем она нужна?</h2>
+                <div class="optimization_text">
+                    На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них совпадает не только по категориям, но и по содержанию.<br><br>
+                    Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или продается одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах.<br><br>
+                    Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода вашего сайта на первую страницу поиска!<br><br>
+                    <span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех конкурентов.</span>
+                </div>
+            <!-- </div> -->
+        </div>
+    </section>
+
+    <section class="finish">
+        <div class="container">
+            <h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+            <div class="finish_divider"></div>
+            <div class="finish_wrapper">
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_1.png" alt="icons" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Создать свой сайт или блог</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_2.png" alt="icons" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Правильно его оптимизировать</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_3.png" alt="icons" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Обеспечить ему медлен-
+                        ный, но верный рост в 
+                        ТОП</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_4.png" alt="icons" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_5.png" alt="icons" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Получать ощутимую прибыль</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gift">
+        <div class="container">
+            <img src="icons/gift.png" alt="gift" class="gift_img">
+            <div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+            <button class="gift_btn">Записаться на интенсив!</button>
+        </div>
+    </section>
+
+    <section class="webinar">
+        <div class="container">
+            <img src="icons/first.png" alt="webinar" class="first_img">
+            <h2 class="webinar_title">Первый вебинар состоится:</h2>
+            <div class="webinar_time">10 сентября в 20:00 по Москве</div>
+            <div class="webinar_text">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="contact">
+            <a class='help' href="https://support.apple.com/uk-ua">Служба поддержки</a>
+            <span>|</span>
+            <a href="https://support.apple.com/uk-ua">Политика конфиденциальности</a>
+        </div>
+        <a class='address'href="tel" +88005550121">Позвоните нам 8-800-555-01-21</a>
+    </footer>
 </body>
 </html>
